seaqt/QtWidgets/gen_qabstractitemview.h

typedef struct QAbstractItemDelegate QAbstractItemDelegate;
typedef struct QEvent QEvent;
typedef struct QItemSelection QItemSelection;
typedef struct QModelIndex QModelIndex;
typedef struct QMouseEvent QMouseEvent;
typedef struct QObject QObject;
typedef struct QStyleOptionViewItem QStyleOptionViewItem;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QAbstractItemView_override_virtual_keyboardSearch(void* self, intptr_t slot);
bool QAbstractItemView_override_virtual_visualRect(void* self, intptr_t slot);
bool QAbstractItemView_override_virtual_scrollTo(void* self, intptr_t slot);
bool QAbstractItemView_override_virtual_indexAt(void* self, intptr_t slot);
bool QAbstractItemView_override_virtual_sizeHintForRow(void* self, intptr_t slot);
int QAbstractItemView_virtualbase_sizeHintForRow(const void* self, int row);
bool QAbstractItemView_override_virtual_sizeHintForColumn(void* self, intptr_t slot);
int QAbstractItemView_virtualbase_sizeHintForColumn(const void* self, int column);
bool QAbstractItemView_override_virtual_itemDelegateForIndex(void* self, intptr_t slot);
QAbstractItemDelegate* QAbstractItemView_virtualbase_itemDelegateForIndex(const void* self, QModelIndex* index);
bool QAbstractItemView_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QAbstractItemView_virtualbase_inputMethodQuery(const void* self, int query);
bool QAbstractItemView_override_virtual_reset(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_reset(void* self);
bool QAbstractItemView_override_virtual_setRootIndex(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_setRootIndex(void* self, QModelIndex* index);
bool QAbstractItemView_override_virtual_doItemsLayout(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_doItemsLayout(void* self);
bool QAbstractItemView_override_virtual_selectAll(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_selectAll(void* self);
bool QAbstractItemView_override_virtual_dataChanged(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_dataChanged(void* self, QModelIndex* topLeft, QModelIndex* bottomRight, struct miqt_array /* of int */  roles);
bool QAbstractItemView_override_virtual_rowsInserted(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_rowsInserted(void* self, QModelIndex* parent, int start, int end);
bool QAbstractItemView_override_virtual_rowsAboutToBeRemoved(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_rowsAboutToBeRemoved(void* self, QModelIndex* parent, int start, int end);
bool QAbstractItemView_override_virtual_selectionChanged(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_selectionChanged(void* self, QItemSelection* selected, QItemSelection* deselected);
bool QAbstractItemView_override_virtual_currentChanged(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_currentChanged(void* self, QModelIndex* current, QModelIndex* previous);
bool QAbstractItemView_override_virtual_updateEditorData(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_updateEditorData(void* self);
bool QAbstractItemView_override_virtual_updateEditorGeometries(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_updateEditorGeometries(void* self);
bool QAbstractItemView_override_virtual_updateGeometries(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_updateGeometries(void* self);
bool QAbstractItemView_override_virtual_verticalScrollbarAction(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_verticalScrollbarAction(void* self, int action);
bool QAbstractItemView_override_virtual_horizontalScrollbarAction(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_horizontalScrollbarAction(void* self, int action);
bool QAbstractItemView_override_virtual_verticalScrollbarValueChanged(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_verticalScrollbarValueChanged(void* self, int value);
bool QAbstractItemView_override_virtual_horizontalScrollbarValueChanged(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_horizontalScrollbarValueChanged(void* self, int value);
bool QAbstractItemView_override_virtual_closeEditor(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_closeEditor(void* self, QWidget* editor, int hint);
bool QAbstractItemView_override_virtual_commitData(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_commitData(void* self, QWidget* editor);
bool QAbstractItemView_override_virtual_editorDestroyed(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_editorDestroyed(void* self, QObject* editor);
bool QAbstractItemView_override_virtual_moveCursor(void* self, intptr_t slot);
bool QAbstractItemView_override_virtual_horizontalOffset(void* self, intptr_t slot);
bool QAbstractItemView_override_virtual_verticalOffset(void* self, intptr_t slot);
bool QAbstractItemView_override_virtual_isIndexHidden(void* self, intptr_t slot);
bool QAbstractItemView_override_virtual_setSelection(void* self, intptr_t slot);
bool QAbstractItemView_override_virtual_visualRegionForSelection(void* self, intptr_t slot);
bool QAbstractItemView_override_virtual_selectedIndexes(void* self, intptr_t slot);
struct miqt_array /* of QModelIndex* */  QAbstractItemView_virtualbase_selectedIndexes(const void* self);
bool QAbstractItemView_override_virtual_edit2(void* self, intptr_t slot);
bool QAbstractItemView_virtualbase_edit2(void* self, QModelIndex* index, int trigger, QEvent* event);
bool QAbstractItemView_override_virtual_selectionCommand(void* self, intptr_t slot);
int QAbstractItemView_virtualbase_selectionCommand(const void* self, QModelIndex* index, QEvent* event);
bool QAbstractItemView_override_virtual_startDrag(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_startDrag(void* self, int supportedActions);
bool QAbstractItemView_override_virtual_initViewItemOption(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_initViewItemOption(const void* self, QStyleOptionViewItem* option);
bool QAbstractItemView_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QAbstractItemView_virtualbase_focusNextPrevChild(void* self, bool next);
bool QAbstractItemView_override_virtual_event(void* self, intptr_t slot);
bool QAbstractItemView_virtualbase_event(void* self, QEvent* event);
bool QAbstractItemView_override_virtual_viewportEvent(void* self, intptr_t slot);
bool QAbstractItemView_virtualbase_viewportEvent(void* self, QEvent* event);
bool QAbstractItemView_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QAbstractItemView_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
bool QAbstractItemView_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* event);
void QAbstractItemView_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);